# jobs-funnel

./: .env.template  .gitignore  LICENSE  README.md  config.json  docker-compose.yml  pyproject.toml  start.bat  workflow.json  workflow_old.json  workflow_template.json  workflow_v2.json  workflow_v2_template.json
countries/: README.md
countries/de/: country.json  geo_allowlist.json  language_hints.json  staffing_patterns.json
countries/global/: country.json  language_hints.json
profiles/: README.md
scripts/: backfill_embeddings.py  backfill_tags.py  backfill_tracking.py  build_workflow.py  calibration_analytics.py  calibration_proposals.py  calibration_settings.py  db.py  dedup.py  dedup_semantic.py  doctor.py  embed.py  embed_next_batch.py  filter.py  generate.py  mark_seen.py  parse.py  read_sheet_urls.py  retrieval.py  run_dedup.py  run_embed.py  run_filter.py  run_generate.py  run_migration.py  run_migrations.py  run_write_output.py  scoring.py  setup_db.sql  setup_profile.py  validate_profile.py  write_output.py
scripts/graph/: __init__.py  build.py  nodes.py  state.py
scripts/lib/: job_text.py  (+3 more)
tests/: test_backfill_embeddings.py  test_calibration_analytics.py  test_calibration_proposals.py  test_calibration_settings.py  test_db.py  test_dedup.py  test_embed.py  test_embed_next_batch.py  test_filter_calibration_flag.py  test_graph.py  test_retrieval.py  test_run_dedup.py  test_run_filter_wrapper.py  test_scoring_provider_layer.py  test_timeline_math.js  test_tracking_api.py
ui/: config.py  db.py  rendering.py  requirements.txt  schema.py  server.py
(+123 files in other folders)
