[tool.setuptools]
packages = []

[project]
name = "jobs-funnel"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "psycopg2-binary",
    "python-dotenv",
    "jinja2",
    "python-multipart>=0.0.27",
    "openpyxl",
    "httpx>=0.27",
    "pgvector>=0.3",
    "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
